--- a/Front_End_Pro_DZ_2/index.html
+++ b/Front_End_Pro_DZ_2/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styless.css">
+    <link rel="stylesheet" href="styles_DZ_2.css">
     <title>Kralilnikov DZ 2</title>
-    <script src="script.js"></script>
+    <script src="script_DZ_2.js"></script>
 </head>
 <body class="bgrnd">
     <h2 class="txt">shalom!!!!!</h2>
